test/invalid/baseline/sequence-empty.txt
Syntax error at line 1 in sequence-empty.widl:
typedef sequence<> empty;
                 ^ Missing sequence subtype
